
<?xml version="1.0"?>
<package format="3">
  <name>trench_roller_autonomy</name>
  <version>0.0.1</version>
  <description>Trench roller autonomy nodes for controlling an IFM controller.</description>
  <maintainer email="your.email@domain.tld">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
